--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>hello world_main</h1>
     <h2>GIT</h2>
-    <h3>HUB</h3>
 </body>
 </html>
